--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
         <!-- Image cards will be dynamically added here -->
       </div>
       <button type="button" class="load-more">Load more</button>
+      <a class="btn-to-top" title="Return to top"></a>
     </div>
 
     <script
