--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,7 @@
         />
         <button type="submit">Search</button>
       </form>
-      <div class="gallery">
-        <!-- Image cards will be dynamically added here -->
-      </div>
+      <div class="gallery"></div>
       <button type="button" class="load-more">Load more</button>
     </div>
 
