--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
         <button type="submit">Search</button>
       </form>
       <div class="gallery"></div>
-      <button type="button" class="load-more">Load more</button>
+      <div id="scroll-target"></div>
+
+      <!-- <button type="button" class="load-more">Load more</button> -->
     </div>
 
     <script
