--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
-    <title>Image Search App</title>
+    <title>Image Search</title>
   </head>
   <body>
     <div class="container">
-      <h1>Image Search App</h1>
+      <h1>Image Search</h1>
       <form class="search-form" id="search-form">
         <input
           type="text"
